--- a/nodeAndro/package.json
+++ b/nodeAndro/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "supervisor server.js"
   },
+  "main": "server.js",
   "dependencies": {
     "express": "~3.2.6",
-    "mongoose": "~3.6.13",
     "body-parser": "~1.0.1",
     "jade": "*"
   }
